--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/EditorUserSettings.asset
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
