--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/EditorUserSettings.asset
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
