--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,4 @@ crashlytics-build.properties
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/EditorUserSettings.asset
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
-*.log
+*.exe0.log
