--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/EditorUserSettings.asset
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.exe0.log
+*/Logs
