--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ UserSettings/EditorUserSettings.asset
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.exe0.log
 */Logs
+UserSettings/EditorUserSettings.asset
